# 19.17

./: CMakeLists.txt  README.md  main.c
libs/string/: CMakeLists.txt
libs/string/tasks/: amount_of_palindromes.h  are_equal_words_in_string.h  balance_string.h  change_word_order.h  find_last_equal_word.h  find_preceding_word.h  find_words_from_same_sets_letters.h  get_word_before_first_word_with_a.h  get_word_except_last.h  letters_belong_string.h  lexicographical_order.h  print_reverse_order.h  remove_adjacent_equal_letters.h  remove_non_letters.h  remove_palindromes.h  replace_digit_to_space.h  replace_word_to_word.h  reverse_word.h  shuffling_words.h  string_.c  string_.h
